# chaos2csv

./: 404.html  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: code_quality_checks.yml
chaos2csv/: __init__.py  __main__.py  c2cparser.py  main.py
chaos2csv/commands/: multiline_dict_tensor.py
docs/: index.md
search/: search_index.json
tests/: test_chaos2csv.py
