[tool]

[tool.poetry]
name = "chaos2csv"
version = "0.0.0"
homepage = "https://github.com/makanu/chaos2csv"
description = "This tool tries to assemble different plain text structures, which makes kind of sense for humans but not for computers. The plain text file might be a result of different print statements passed into a file or anything else which may have caused this chaos."
authors = ["MaKaNu <matti dot kaupenjohann at fh minus dortmund dot de>"]
readme = "README.md"
license =  "GPL-3.0-only"
classifiers=[
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
include = [
    "LICENSE",
    "chaos2csv/py.typed"
]

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = "^3.4.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^6.1.5"
pytest = "^6.0"
pytest-cov = "^2.10.1"

pylint = "^2.6.0"
black = "22.3.0"
mypy = "0.960"

[tool.black]
line-length=100

[tool.pylint.reports]
output-format="colorized"
reports="y"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=chaos2csv --cov-branch --cov-report term-missing  -vv --color=yes --cov-fail-under 100"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
